unpackaged/main/default/objects/icAgentConsole__incAgentConfigField__c/icAgentConsole__incAgentConfigField__c.object-meta.xml
<CustomObject>
    <label>Agent Configuration Field</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Configuration Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>