unpackaged/main/default/objects/icAgentConsole__incAgentConfigField__c/fields/icAgentConsole__FieldType__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__FieldType__c</fullName>
    <defaultValue>&quot;STRING&quot;</defaultValue>
    <description>Salesforce object field type</description>
    <label>FieldType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>