unpackaged/main/default/objects/icAgentConsole__incAgentConfigField__c/fields/icAgentConsole__incAgentConfigurationEntity__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__incAgentConfigurationEntity__c</fullName>
    <label>Agent Configuration Entity</label>
    <referenceTo>icAgentConsole__incAgentConfigEntity__c</referenceTo>
    <relationshipLabel>Agent Configuration Fields</relationshipLabel>
    <relationshipName>AgentConfigurationFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>