unpackaged/main/default/objects/icAgentConsole__incAgentConfigField__c/fields/icAgentConsole__ValueField__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__ValueField__c</fullName>
    <inlineHelpText>Field / property of the object, specified in ValueObject field, to get the value for this field</inlineHelpText>
    <label>Value Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>