unpackaged/main/default/objects/icAgentConsole__incAgentConfigField__c/fields/icAgentConsole__ValueObject__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__ValueObject__c</fullName>
    <inlineHelpText>Object to get value for this field, i.e. either ScriptVariable or CallInfo or WorkItemInfo</inlineHelpText>
    <label>Value Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>